# app/Http/Controllers/Stylist/SalonController.php
@@ -23,6 +23,7 @@ use File;
 class SalonController extends Controller
 {
     protected $workingTimes;
+
     /**
      * @SWG\Post(
      *     path="/api/stylist/add_salon",
@@ -299,15 +300,14 @@ class SalonController extends Controller
              'location'          => '',
              'images.*'          => 'mimes:jpg,jpeg,gif,png',
              'service_name'      => 'array',
-             'item_name'         => 'array',
-             'item_price'        => 'array',
-             'working_days'      =>''
+             'item'              => '',
+             'working_days'      => ''
          ]);
 
         try {
             $stylist = $this->findStylistById(Auth::id());
             $salon   = Salon::find($stylist->salon_id);
-
+            
             if ($validator->fails()) {
                 return response()->json(['error' => $validator->errors()], 422);
             }
@@ -340,7 +340,7 @@ class SalonController extends Controller
 
             if ($request->service_name) {
                 foreach($request->service_name as $service) {
-                    $sevicesModel   = new Services();
+                    $sevicesModel           = new Services();
                     $sevicesModel->name     = $service;
                     $sevicesModel->salon_id = $stylist->salon_id;
 
@@ -350,11 +350,11 @@ class SalonController extends Controller
 
             $removeService = SalonMenu::where('salon_id', $stylist->salon_id)->delete();
 
-            if ($request->item_name) {
-                foreach ( $request->item_name as $key => $value){
+            if ($request->item) {
+                foreach ( $request->item as $value){
                     $dataForMenu = [
-                        'item_name'  => $request->item_name[$key],
-                        'item_price' => $request->item_price[$key] ,
+                        'item_name'  => $value['item_name'],
+                        'item_price' => $value['item_price'] ,
                         'salon_id'   => $salon->id
                     ];
                   $menu =  SalonMenu::insert($dataForMenu);
@@ -725,13 +725,36 @@ class SalonController extends Controller
             'email' => 'required|string|email',
         ]);
 
-        $user = User::where('email', $request->email)
-                    ->where('user_type','stylist')->first();
+        $user           = User::where('email', $request->email)
+                        ->where('user_type','stylist')->first();
 
         if (!$user) {
             return response()->json([
                 'message' => 'We can\'t find a user with that e-mail address.'
                 ], 404);
+        }                
+
+        $stylist        = $this->findStylistById(Auth::id());
+
+        $beautyPro      = $this->getStylistByEmail($request->email);
+        
+ 
+        $isAlreadyExist = SalonEmployee::where('salon_id',$stylist->salon_id)
+                                        ->where('stylist_id', $beautyPro->stylist_id)->first();
+
+        if ($isAlreadyExist) {
+            return response()->json([
+            'message' => 'Beauty Pro is aleardy exist.'
+                ], 422);
+        }
+    
+        $isJoinedToAnotherSalon =  SalonEmployee::find($beautyPro->stylist_id);   
+
+        
+        if ($isJoinedToAnotherSalon) {
+            return response()->json([
+            'message' => 'Beauty Pro employeed at another salon'
+                ], 422);
         }
 
         $invitation = Invitation::updateOrCreate(
@@ -742,8 +765,6 @@ class SalonController extends Controller
                 'token' => Str::random(60)
              ]
         );
-
-        $stylist = $this->findStylistById(Auth::id());
 
         if ($user && $invitation) {
             $user->notify(
@@ -792,15 +813,16 @@ class SalonController extends Controller
             $workTimes                      = Salon::find($id)->workTime;
 
             if ($workTimes) {
-                $mySalon['workingTimes']    = [
-                                                'monday'    => json_decode($workTimes->monday),
-                                                'tuesday'   => json_decode($workTimes->tuesday),
-                                                'wednesday' => json_decode($workTimes->wednesday),
-                                                'thursday'  => json_decode($workTimes->thursday),
-                                                'friday'    => json_decode($workTimes->friday),
-                                                'saturday'  => json_decode($workTimes->saturday),
-                                                'sunday'    => json_decode($workTimes->sunday),
-                                             ];
+                $mySalon['workingTimes']    = 
+                [
+                    'monday'    => json_decode($workTimes->monday),
+                    'tuesday'   => json_decode($workTimes->tuesday),
+                    'wednesday' => json_decode($workTimes->wednesday),
+                    'thursday'  => json_decode($workTimes->thursday),
+                    'friday'    => json_decode($workTimes->friday),
+                    'saturday'  => json_decode($workTimes->saturday),
+                    'sunday'    => json_decode($workTimes->sunday),
+                 ];
             }
 
             $salonEmployee                  = Salon::find($id)->beautyPro;
@@ -878,7 +900,7 @@ class SalonController extends Controller
     }
     /**
      * @SWG\Get(
-     *     path="/api/show_my_beauty_pro",
+     *     path="/api/salon/show_my_beauty_pro",
      *     summary="show my salons's beauty pro",
      *     tags={"Salon"},
      *     description="show my salons's beauty pro workers",
@@ -933,12 +955,14 @@ class SalonController extends Controller
      *     ),
      * )
      */
-    public function deleteMyBeautyPro($id)
+    public function deleteMyBeautyPro($username)
     {
         try{
-            $stylist       = $this->findStylistById(Auth::id());
+
+            $stylist       = $this->getStylistByUsername($username);
             $salonEmployee = SalonEmployee::where('salon_id',$stylist->salon_id)
-                                            ->where('stylist_id',$id)->delete();
+                                            ->where('stylist_id',$stylist->stylist_id)->delete();
+
             if ($salonEmployee) {
 
                 return response()->json(['message'=>'BeautyPro Excluded'], 200);
@@ -951,4 +975,80 @@ class SalonController extends Controller
             return response()->json(['error' => 'something went wrong!'], 500);
         }
      }
+     
+    public function getStylistByUsername($username)
+    {
+        $stylist = DB::table('stylists')
+                    ->join('users', 'stylists.user_id', '=', 'users.id')
+                    ->select('stylists.id as stylist_id',
+                             'stylists.salon_id',
+                             'stylists.is_salon_owner',
+                             'users.id as user_id',
+                             'users.username',
+                             'users.email',
+                             'users.fullname',
+                             'users.age',
+                             'users.phone_number',
+                             'users.whats_app',
+                             'users.address',
+                             'users.introduction',
+                             'users.longitude',
+                             'users.latitude',
+                             'users.profile_photo',
+                             'users.background_photo',
+                             'users.user_type'
+                    )
+                    ->where('users.username', '=', $username)
+                    ->first();
+
+     return $stylist;
+    }
+
+    public function getStylistByEmail($email)
+    {
+        $stylist = DB::table('stylists')
+                    ->join('users', 'stylists.user_id', '=', 'users.id')
+                    ->select('stylists.id as stylist_id',
+                             'stylists.salon_id',
+                             'stylists.is_salon_owner',
+                             'users.id as user_id',
+                             'users.username',
+                             'users.email',
+                             'users.fullname',
+                             'users.age',
+                             'users.phone_number',
+                             'users.whats_app',
+                             'users.address',
+                             'users.introduction',
+                             'users.longitude',
+                             'users.latitude',
+                             'users.profile_photo',
+                             'users.background_photo',
+                             'users.user_type'
+                    )
+                    ->where('users.email', '=', $email)
+                    ->first();
+
+     return $stylist;
+    }
+
+    public function addMeToSalonStaff()
+    {
+        try{
+            $stylist         = $this->findStylistById(Auth::id());
+            $meAsStaffMember = SalonEmployee::where('salon_id',$stylist->salon_id)
+                                            ->where('stylist_id',$stylist->stylist_id)->first();
+
+            if ($salonEmployee) {
+
+                return response()->json(['message'=>'You already exist'], 200);
+            } else {
+
+                // add me to salon staff 
+            }
+
+        } catch (Exception $e) {
+            return response()->json(['error' => 'something went wrong!'], 500);
+        }
+    }
 }
